Fix collapse icon-padding

--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -31,7 +31,7 @@
       font-family: $s-font-family-icons;
       @extend .s-icon-chevron-down-rounded-16;
       font-size: var(--s-icon-font-size-mini);
-      padding: 8px;
+      padding: 9px 8px 7px;
       width: 32px;
       height: 32px;
       background-color: var(--s-color-base-background);
